--- a/MJCompiler/build.xml
+++ b/MJCompiler/build.xml
@@ -7,6 +7,10 @@
 				<exclude name="sym_old.java"/>
 				<exclude name="util/Log4JUtils.java"/>
 				<exclude name="Yylex.java"/>
+				<exclude name="RuleVisitor.java"/>
+				<exclude name="SemanticAnalyzer.java"/>
+
+
 			</fileset>
 		</delete>
 		<delete>
@@ -49,6 +53,8 @@
 				<pathelement path="lib/JFlex.jar"/>
 				<pathelement path="lib/cup_v10k.jar"/>
 				<pathelement path="lib/log4j-1.2.17.jar"/>
+				<pathelement path="lib/symboltable-1-1.jar"/>
+
 			</classpath>
 		</javac>
 
